# 3T

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md  commit.txt  config.yml  config.yml.example  deployment-production.puml  docker-compose.yml  fly.observer.toml  fly.proxy.toml  level-1-context.puml  level-2-container.puml  level-3-strategy-runner.puml  otel-collector.yml  pyproject.toml  render_diagrams.sh  requirements-dev.txt  secrets.test.yml  secrets.yml.example  settlement_architecture.md  test_perm_entropy_celery.py  trisagion_system_context.md
.github/: PULL_REQUEST_TEMPLATE.md
celery/: Dockerfile  requirements.txt
celery-services/: Dockerfile  requirements.txt
components/: Dockerfile  requirements.txt
database/: init.sql  mariadb.cnf
examples/: example_clone_runs.py  example_create_run.py  example_dashboard.py  example_feed.py  example_flippycoin.py  example_market_data_getter.py  example_market_data_setter.py  example_perm_entropy_simple.py  example_perm_entropy_standalone.py  example_price_getter.py  example_price_setter.py  example_purge.py  example_showcase_new_tasks.py  example_volatility.py  example_voms.py  flippycoin.sh
exchange-observer/: Dockerfile  observer.py  requirements.txt
flower/: Dockerfile
health-monitor/: Dockerfile  monitor.py  requirements.txt
hub/: Caddyfile  Dockerfile  entrypoint.sh  fly.metrics.toml  metrics_snapshotter.py
jaeger/: Dockerfile  purge.sh  wait-for-es.sh
mcp-server/: 3t-tools.yaml
metrics-exporter/: Dockerfile  exporter.py  requirements.txt
mission-control/: Dockerfile  compound.html  index.html  trendlines.html
prometheus/: entrypoint.sh  (+1 more)
(+120 files in other folders)
